# compression-tool

./: .gitignore  README.md  benchmark.sh
.github/workflows/: docker-build.yml  docker.yml
js/: Dockerfile  index.js  lz.js  package.json  rle.js  test.sh
js/test/: lz.test.js  rle.test.js
rust/: Cargo.toml  Dockerfile
rust/src/: lz.rs  main.rs
